crates/vize_atelier_ssr/src/snapshots/vize_atelier_ssr__tests__ssr_v_for_list.snap
---
source: crates/vize_atelier_ssr/src/lib.rs
expression: result.code.as_str()
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<ul${_ssrRenderAttrs(_attrs)}>`)
  _push(`<!--[-->`)
  _ssrRenderList(_ctx.items, (item) => {
    _push(`<li>${_ssrInterpolate(item.name)}</li>`)
  })
  _push(`<!--]-->`)
  _push(`</ul>`)
}
